--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "knex:seed": "knex --knexfile knexfile.ts seed:run",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
@@ -12,20 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "celebrate": "^12.1.1",
+    "celebrate": "^12.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.21.1",
+    "knex": "^0.21.6",
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/hapi__joi": "^17.1.2",
-    "@types/multer": "^1.4.3",
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.8",
+    "@types/hapi__joi": "^17.1.6",
+    "@types/multer": "^1.4.4",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "ts-node-dev": "^1.0.0-pre.63",
+    "typescript": "^3.9.7"
   }
 }
