--- a/web/package.json
+++ b/web/package.json
@@ -7,18 +7,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@types/node": "^12.12.62",
     "axios": "^0.19.2",
-    "leaflet": "^1.6.0",
+    "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.1",
-    "react-icons": "^3.10.0",
+    "react-dropzone": "^11.2.0",
+    "react-icons": "^3.11.0",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "~3.7.2",
-    "yup": "^0.29.1"
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,10 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/react-leaflet": "^2.5.1",
+    "@types/react-leaflet": "^2.5.2",
     "@types/react-router-dom": "^5.1.5",
-    "@types/yup": "^0.29.3"
+    "@types/yup": "^0.29.7"
   }
 }
